--- a/arch/arm/configs/cm_rhine_honami_row_defconfig
+++ b/arch/arm/configs/cm_rhine_honami_row_defconfig
@@ -1,3 +1,7 @@
+CONFIG_FSYNC_CONTROL=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-cm"
